--- a/package.json
+++ b/package.json
@@ -1,17 +1,36 @@
 {
   "name": "frontend",
   "version": "0.0.0",
-  "private": true,
   "scripts": {
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^3.1.2",
+    "@sendgrid/mail": "^7.2.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "moment": "^2.27.0",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.4"
+    "node-fetch": "^2.6.0",
+    "nodemon": "^2.0.4",
+    "@fortawesome/fontawesome-free": "^5.13.1",
+    "@fullcalendar/bootstrap": "^5.0.0",
+    "@fullcalendar/core": "^5.0.0",
+    "@fullcalendar/daygrid": "^5.0.0",
+    "@fullcalendar/interaction": "^5.0.0",
+    "@fullcalendar/list": "^5.0.0",
+    "@fullcalendar/timegrid": "^5.0.0",
+    "bootstrap": "^4.5.0"
+  },
+  "devDependencies": {
+    "css-loader": "^3.4.2",
+    "file-loader": "^6.0.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.2.1"
   }
 }
